--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   <body>
     <div id="board">
       <section>
-        <h1>Tic Tac Toe</h1>
-        <h2 class="gamestatus"></h2>
+				<h1>Tic Tac Toe</h1>
+				<div class="progressbar">
+						<div class="insidebar">Sec</div>
+				<h2 class="gamestatus"></h2>
         <div class="tabledata">
           <div cellnumber="0" class="cell"></div>
           <div cellnumber="1" class="cell"></div>
